system-components/holmes/kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: holmes
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: holmes
  template:
    metadata:
      labels:
        app: holmes
    spec:
      containers:
        - name: holmes
          image: ghcr.io/panicboat/monorepo/holmes:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
