system-components/holmes/kubernetes/base/service-slack.yaml
apiVersion: v1
kind: Service
metadata:
  name: holmes-slack
spec:
  selector:
    app: holmes-slack
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
