system-components/holmes/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: holmes-relay
spec:
  selector:
    app: holmes-relay
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
